Closed Bug 559129 Opened 14 years ago Closed 14 years ago

CaminoImporter still in use after quit

Categories

(Camino Graveyard :: General, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: lthompson.22, Assigned: stuart.morgan+bugzilla)

Details

(Whiteboard: [camino-2.0.3][camino-2.0.5])

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en; rv:1.9.2.4pre) Gecko/20100412 Camino/2.1a1pre (like Firefox/3.6.4pre)
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en; rv:1.9.2.4pre) Gecko/20100412 Camino/2.1a1pre (like Firefox/3.6.4pre)

CaminoImporter is still in use after quit, preventing replacement of Camino.app in the Applications folder.


Reproducible: Sometimes

Steps to Reproduce:
1. Quit Camino (2.1/1.9.2, not sure if other versions would be affected)
2. Open Camino disk image and drag its Camino.app into Applications folder
3. Click yes when asked if you want to replace

Actual Results:  
An error message pops up: The operation can't be completed because the item "CaminoImporter" is in use.


Expected Results:  
Copy/replacement should proceed without issue.

I've seen this twice, after downloading and trying to install the 4-6 and 4-12 builds of the experimental version. Both times, I immediately tried the drag again and the copy/replacement succeeded. I can't seem to reproduce the error at will, though, guess it has to do with timing.

In the forums, Uncle Asad says: "... from Bug 549179 :-( Since we write out metadata again on quit, the Spotlight importer could still be processing those files."
I haven't seen this, but I also know that the importer that Spotlight has loaded in my case is the one from my 2.1-1.9.0 debug build, not my daily-use build.

I'm worried that this will also hang up Sparkle's updates, so we really need to have some sort of answer here before we ship 2.0.3 so that we don't break updates to 2.0.4.
Flags: camino2.0.3?
> Since we write out metadata again on quit [...]

Actually, we don't; we write it all out from scratch on startup, and we write individual bookmarks when they change or are added.

Lisa, how many bookmarks do you have, and how long had Camino been running when you quit?
Assignee: nobody → stuart.morgan+bugzilla
I have about 1200 bookmarks.

I couldn't tell you, now, how long Camino was running the two times I saw this. Possible maximum could be days, as I pretty much leave Camino running until I have some reason to quit.
Attached patch improvementSplinter Review
This should make it harder to get into this case, since we wont be spamming Spotlight on every startup. It will also mean less disk activity during most startups, which can't hurt.

It'll still be possible to get into this state by changing a bookmark very shortly before quitting though.
Attachment #439849 - Flags: superreview?(mikepinkerton)
Comment on attachment 439849 [details] [diff] [review]
improvement

sr=pink
Attachment #439849 - Flags: superreview?(mikepinkerton) → superreview+
Stuart, do you have an ETA for landing this, or would you like me to land this for you?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: camino2.0.3? → camino2.0.3+
Landed on CVS trunk and 2.0 branch.
And hg: http://hg.mozilla.org/camino/rev/76464ab64f9c
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0.3]
Per the forum, Lisa's still seeing this:

> I still get hit with this just about every time I update my nightly (once or 
> twice a week). The bug says "It'll still be possible to get into this state 
> by changing a bookmark very shortly before quitting though." But in many 
> cases, countless hours have elapsed between the time I last made changes to 
> bookmarks and the time I quit Camino.

> Anything more I can do to document or reduce this?

----

[11:03pm] sauron: any ideas? :(
[11:04pm] smorgan: Not really; I'm not sure if there's a good way to find out why spotlight launched it, and when
[11:04pm] sauron: should i have Lisa file another bug in case you think of something?
[11:04pm] smorgan: Or maybe re-open the old one; whichever seems to make the most sense
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
The problem is that we are writing new metadata whenever the visit count changes (and probably other cases we shouldn't). We need to slim down the set of flags that trigger metadata refresh to just the ones that affect things the importer cares about.
Attached patch more improvementSplinter Review
Stops causing us to write metadata whenever the change is something irrelevant like visiting the site.
Attachment #471037 - Flags: superreview?(mikepinkerton)
FWIW, I was getting this 80% of the time I updated. I use the following:
echo "tell application \"Finder\" to move file \"Camino:Camino.app\" to \"Macintosh HD:Applications\" with replacing" | osascript -
as part of a shell script, and it used to work flawlessly, then about 2-3 months ago (?) it started complaining about CaminoImporter - since I could never find the CaminoImporter process, I figured it was just some weirdness (perhaps relating to OmniFocus, which causes a similar error to Mail.app sometimes), but then I found this.

FWIW, it didn't happen tonight - don't know if Stuart's fix was in "Version 2.1a1pre (1.9.2.10pre 20100913000554)"?
The fix is still in review. See the forum thread
http://forums.mozillazine.org/viewtopic.php?f=12&t=1980269
for more info on where the CaminoImporter file is and when and why it gets opened. (And why, even with the fix, any nightly update script should probably include code to make sure the file is closed before replacing; there's a relevant shell command in the thread.)
Comment on attachment 471037 [details] [diff] [review]
more improvement

sr=pink
Attachment #471037 - Flags: superreview?(mikepinkerton) → superreview+
http://hg.mozilla.org/camino/rev/284d989ce2ee
Crossing fingers that this will be fixed enough that we don't have to set up nasty on-update hooks to watch ps or lsof.

Smokey, can you land for 2.0.5?
Status: REOPENED → RESOLVED
Closed: 14 years ago14 years ago
Flags: camino2.0.5? → camino2.0.5+
OS: Mac OS X → Windows 7
Resolution: --- → FIXED
OS: Windows 7 → Mac OS X
Hardware: x86 → All
(In reply to comment #15)
> http://hg.mozilla.org/camino/rev/284d989ce2ee
> Crossing fingers that this will be fixed enough that we don't have to set up
> nasty on-update hooks to watch ps or lsof.

I think you thought back in round 1 (I don't see it here; maybe in a meeting or just the channel?) that updates shouldn't see this; it would only affect nightly users (or others who do the download-drag-replace dance)?

> Smokey, can you land for 2.0.5?

Landed on CAMINO_2_0_BRANCH for 2.0.5.
Whiteboard: [camino-2.0.3] → [camino-2.0.3][camino-2.0.5]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: