Camino only - Bug 559129: Make bookmark Spotlight metadata writes incremental. r/sr=pink